--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <script type="module" src="/src/main.tsx"></script>
 
         <!-- Bootstrap -->
-        <script
+        <!-- <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
             crossorigin="anonymous"
-        ></script>
+        ></script> -->
 
         <!-- muni spinner -->
         <script src="https://webservice.muninqn.gov.ar/cglobales/spinner/muni-spinner.js"></script>
